# windy-home

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml  validate.yml
custom_components/windy_home/: __init__.py  api.py  camera.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  strings.json  weather.py
custom_components/windy_home/translations/: en.json
custom_components/windy_home/www/: windy-cards.js
tests/: __init__.py  conftest.py  test_api.py  test_coordinator.py  test_integration.py  test_live_api.py  test_sensor.py
tests/ha_docker/: docker-compose.yml  run_ha.py  test_ha_docker.py
tests/ha_docker/config/: configuration.yaml
